--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,87 +6,27 @@ on:
   workflow_dispatch:
 
 jobs:
-  macOS:
-    env:
-      PROCURSUS: /opt/procursus
-      PATH: /opt/procursus/bin:/opt/procursus/libexec/gnubin:/usr/local/lib/ruby/gems/2.7.0/bin:/usr/local/opt/ruby@2.7/bin:/usr/local/opt/pipx_bin:/Users/runner/.cargo/bin:/usr/local/opt/curl/bin:/usr/local/bin:/usr/local/sbin:/Users/runner/bin:/Users/runner/.yarn/bin:/Users/runner/Library/Android/sdk/tools:/Users/runner/Library/Android/sdk/platform-tools:/Users/runner/Library/Android/sdk/ndk-bundle:/Library/Frameworks/Mono.framework/Versions/Current/Commands:/usr/bin:/bin:/usr/sbin:/sbin:/Users/runner/.dotnet/tools:/Users/runner/.ghcup/bin:/Users/runner/hostedtoolcache/stack/2.7.3/x64
-    runs-on: macos-11
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-      with:
-        submodules: 'true'
-        fetch-depth: 0
-    - name: macOS Build
-      id: macOS-Build
-      run: |
-        /Users/runner/work/futurerestore/futurerestore/.github/workflows/mac-bootstrap.sh
-        /Users/runner/work/futurerestore/futurerestore/.github/workflows/mac-build.sh
-        /Users/runner/work/futurerestore/futurerestore/.github/workflows/mac-post.sh
-    - name: macOS RELEASE Archive
-      id: macOS-RELEASE-Archive
-      uses: actions/upload-artifact@v2
-      with:
-        name: futurerestore-macOS-RELEASE
-        path: |
-          /Users/runner/work/futurerestore/futurerestore/futurerestore-macOS-*-RELEASE.tar.xz
-    - name: macOS DEBUG Archive
-      id: macOS-DEBUG-Archive
-      uses: actions/upload-artifact@v2
-      with:
-        name: futurerestore-macOS-DEBUG
-        path: |
-          /Users/runner/work/futurerestore/futurerestore/futurerestore-macOS-*-DEBUG.tar.xz
-    - name: macOS ASAN Archive
-      id: macOS-ASAN-Archive
-      uses: actions/upload-artifact@v2
-      with:
-        name: futurerestore-macOS-ASAN
-        path: |
-          /Users/runner/work/futurerestore/futurerestore/futurerestore-macOS-*-ASAN.tar.xz
-  Linux:
-    runs-on: ubuntu-latest
+  Windows:
+    runs-on: windows-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
           submodules: 'true'
           fetch-depth: 0
-      - name: Linux Build
-        id: Linux
-        uses: addnab/docker-run-action@v3
-        with:
-          image: debian:buster-slim
-          options: -v ${{ github.workspace }}/..:/tmp/Builder/repos/
-          run: |
-            /tmp/Builder/repos/futurerestore/.github/workflows/linux-bootstrap.sh
-            /tmp/Builder/repos/futurerestore/.github/workflows/linux-build.sh
-            /tmp/Builder/repos/futurerestore/.github/workflows/linux-post.sh
-      - name: Linux x86_64 RELEASE Build
+      - name: Windows Build
+        id: Windows
+        uses: msys2/setup-msys2@v2
+        shell: msys2 {0}
         run: |
-          mkdir -p /home/runner/work/futurerestore/futurerestore/.github/workflows/
-          docker cp $(docker ps -ql):/tmp/Builder/repos/futurerestore/.github/workflows/name1.txt /home/runner/work/futurerestore/futurerestore/.github/workflows/
-          docker cp $(docker ps -ql):/tmp/Builder/repos/futurerestore/.github/workflows/futurerestore1.tar.xz /home/runner/work/futurerestore/futurerestore/.github/workflows/
-          mv /home/runner/work/futurerestore/futurerestore/.github/workflows/futurerestore1.tar.xz /home/runner/work/futurerestore/futurerestore/.github/workflows/$(cat /home/runner/work/futurerestore/futurerestore/.github/workflows/name1.txt)
-      - name: Linux x86_64 DEBUG Build
-        run: |
-          mkdir -p /home/runner/work/futurerestore/futurerestore/.github/workflows/
-          docker cp $(docker ps -ql):/tmp/Builder/repos/futurerestore/.github/workflows/name2.txt /home/runner/work/futurerestore/futurerestore/.github/workflows/
-          docker cp $(docker ps -ql):/tmp/Builder/repos/futurerestore/.github/workflows/futurerestore2.tar.xz /home/runner/work/futurerestore/futurerestore/.github/workflows/
-          mv /home/runner/work/futurerestore/futurerestore/.github/workflows/futurerestore2.tar.xz /home/runner/work/futurerestore/futurerestore/.github/workflows/$(cat /home/runner/work/futurerestore/futurerestore/.github/workflows/name2.txt)
-      - name: Linux x86_64 ASAN Build
-        run: |
-          mkdir -p /home/runner/work/futurerestore/futurerestore/.github/workflows/
-          docker cp $(docker ps -ql):/tmp/Builder/repos/futurerestore/.github/workflows/name3.txt /home/runner/work/futurerestore/futurerestore/.github/workflows/
-          docker cp $(docker ps -ql):/tmp/Builder/repos/futurerestore/.github/workflows/futurerestore3.tar.xz /home/runner/work/futurerestore/futurerestore/.github/workflows/
-          mv /home/runner/work/futurerestore/futurerestore/.github/workflows/futurerestore3.tar.xz /home/runner/work/futurerestore/futurerestore/.github/workflows/$(cat /home/runner/work/futurerestore/futurerestore/.github/workflows/name3.txt)
+          sh $(GITHUB_WORKSPACE)/futurerestore/futurerestore/.github/workflows/win-build.sh
       - name: futurerestore Linux x86_64 RELEASE Archive
         id: futurerestore-Linux-x86_64-RELEASE-Archive
         uses: actions/upload-artifact@v2
         with:
           name: futurerestore-Linux-x86_64-RELEASE
           path: |
-            /home/runner/work/futurerestore/futurerestore/.github/workflows/futurerestore-Linux-x86_64*-RELEASE.tar.xz
+            $(GITHUB_WORKSPACE)/futurerestore/futurerestore/.github/workflows/futurerestore-Linux-x86_64*-RELEASE.tar.xz
       - name: futurerestore Linux x86_64 DEBUG Archive
         id: futurerestore-Linux-x86_64-DEBUG-Archive
         uses: actions/upload-artifact@v2
