--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,14 +10,18 @@ jobs:
     runs-on: windows-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
         with:
           submodules: 'true'
           fetch-depth: 0
       - name: Windows Build
         id: Windows
-        uses: msys2/setup-msys2@v2
+      - uses: msys2/setup-msys2@v2
         with:
-          shell: msys2 {0}
-          run: |
-            sh $(GITHUB_WORKSPACE)/futurerestore/futurerestore/.github/workflows/win-build.sh
+          update: true
+          install: >-
+            base-devel
+            git
+      - run: |
+          sh $(GITHUB_WORKSPACE)/futurerestore/futurerestore/.github/workflows/win-build.sh
+        shell: bash
